# vulnerablecode

./: .VERSION  .coveragerc  .coveralls.yml  .dockerignore  .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  Dockerfile  MANIFEST.in  Makefile  NOTICE  PIPELINES-AVID.rst  Pipfile  Procfile  README.md  README.rst  SOURCES.rst  api_data.py  api_v3_usage.rst  azure-pipelines.yml  configure  configure.bat  data_dump.py  docker-compose.yml  docker.env  flake.nix  haha  make-poetry-conversion-patch.sh  manage.py  mypy.ini  poetry-conversion.patch  prek.toml  pyproject-aboutcode.federated.toml  pyproject-aboutcode.hashid.toml  pyproject.toml  pytest.ini  requirements-dev.txt  (+10 more)
agent/: apps.py  urls.py  (+2 more)
purl_sync/: Dockerfile  Makefile  README.rst  docker-compose.yml  docker.env  manage.py  pyproject.toml  requirements.txt
purl_sync/etc/nginx/conf.d/: default.conf
purl_sync/purl_sync/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
purl_sync/review/: activitypub.py  admin.py  apps.py  forms.py  importer.py  models.py  signatures.py  signatures.py.ABOUT  signatures.py.LICENSE  utils.py  views.py
purl_sync/review/management/commands/: importer.py
purl_sync/review/migrations/: 0001_initial.py  0002_alter_person_avatar_alter_purl_avatar.py  0002_person_notes_repository_last_imported_commit.py  0002_remove_purl_avatar.py  0003_alter_vulnerability_unique_together.py  0003_remove_note_note_type.py
purl_sync/review/static/: pictogram-gh-pages.ABOUT  pictogram-gh-pages.LICENSE
purl_sync/review/static/fonts/: fontawesome-webfont.svg.ABOUT
purl_sync/review/static/js/: jquery-3.7.0.min.js.ABOUT
purl_sync/review/static/pictogram-gh-pages/actionscript/: actionscript.json
purl_sync/review/static/pictogram-gh-pages/alcatraz/: alcatraz.json
purl_sync/review/static/pictogram-gh-pages/apache/: apache.json
purl_sync/review/static/pictogram-gh-pages/assembly/: assembly.json
purl_sync/review/static/pictogram-gh-pages/atom/: atom.json
purl_sync/review/static/pictogram-gh-pages/biicode/: biicode.json
purl_sync/review/static/pictogram-gh-pages/bower/: bower.json
purl_sync/review/static/pictogram-gh-pages/c/: c.json
purl_sync/review/static/pictogram-gh-pages/c#/: c#.json
purl_sync/review/static/pictogram-gh-pages/c++/: c++.json
purl_sync/review/static/pictogram-gh-pages/cargo/: cargo.json
purl_sync/review/static/pictogram-gh-pages/carthage/: carthage.json
purl_sync/review/static/pictogram-gh-pages/clojars/: clojars.json
purl_sync/review/static/pictogram-gh-pages/clojure/: clojure.json
purl_sync/review/static/pictogram-gh-pages/cocoapods/: cocoapods.json
purl_sync/review/static/pictogram-gh-pages/coffeescript/: coffeescript.json
purl_sync/review/static/pictogram-gh-pages/cpan/: cpan.json
purl_sync/review/static/pictogram-gh-pages/cran/: cran.json
purl_sync/review/static/pictogram-gh-pages/crystal/: crystal.json
purl_sync/review/static/pictogram-gh-pages/css/: css.json
purl_sync/review/static/pictogram-gh-pages/d/: d.json
purl_sync/review/static/pictogram-gh-pages/dart/: dart.json
purl_sync/review/static/pictogram-gh-pages/dub/: dub.json
purl_sync/review/static/pictogram-gh-pages/elixir/: elixir.json
purl_sync/review/static/pictogram-gh-pages/elm/: elm.json
purl_sync/review/static/pictogram-gh-pages/emacs/: emacs.json
purl_sync/review/static/pictogram-gh-pages/erlang/: erlang.json
purl_sync/review/static/pictogram-gh-pages/f#/: f#.json
purl_sync/review/static/pictogram-gh-pages/fortran/: fortran.json
purl_sync/review/static/pictogram-gh-pages/game maker language/: game maker language.json
purl_sync/review/static/pictogram-gh-pages/gem/: gem.json
purl_sync/review/static/pictogram-gh-pages/go/: go.json
purl_sync/review/static/pictogram-gh-pages/groovy/: groovy.json
purl_sync/review/static/pictogram-gh-pages/hack/: hack.json
purl_sync/review/static/pictogram-gh-pages/hackage/: hackage.json
purl_sync/review/static/pictogram-gh-pages/handlebars/: handlebars.json
purl_sync/review/static/pictogram-gh-pages/haskell/: haskell.json
purl_sync/review/static/pictogram-gh-pages/haxe/: haxe.json
purl_sync/review/static/pictogram-gh-pages/hex/: hex.json
purl_sync/review/static/pictogram-gh-pages/homebrew/: homebrew.json
purl_sync/review/static/pictogram-gh-pages/html/: html.json
purl_sync/review/static/pictogram-gh-pages/inqlude/: inqlude.json
purl_sync/review/static/pictogram-gh-pages/jam/: jam.json
purl_sync/review/static/pictogram-gh-pages/java/: java.json
purl_sync/review/static/pictogram-gh-pages/javascript/: javascript.json
purl_sync/review/static/pictogram-gh-pages/julia/: julia.json
purl_sync/review/static/pictogram-gh-pages/livescript/: livescript.json
purl_sync/review/static/pictogram-gh-pages/lua/: lua.json
purl_sync/review/static/pictogram-gh-pages/make/: make.json
purl_sync/review/static/pictogram-gh-pages/makefile/: makefile.json
purl_sync/review/static/pictogram-gh-pages/maven/: maven.json
purl_sync/review/static/pictogram-gh-pages/meteor/: meteor.json
purl_sync/review/static/pictogram-gh-pages/nimble/: nimble.json
purl_sync/review/static/pictogram-gh-pages/nimrod/: nimrod.json
purl_sync/review/static/pictogram-gh-pages/npm/: npm.json
purl_sync/review/templates/: base.html  create_repository.html  create_review.html  footer.html  home.html  login.html  navbar.html  note.html  purl_list.html  purl_profile.html  repo_list.html  review.html  review_list.html  update_profile.html  user_profile.html  user_sign_up.html  webfinger_purl.json  webfinger_user.json
purl_sync/review/templatetags/: webfinger_image.py
purl_sync/review/tests/: docker-compose-dev-test-federation.yml  docker-compose-dev-test-federation1.env  docker-compose-dev-test-federation2.env  test_activitypub.py  test_ap_api.py  test_federation.py  test_importer.py  test_models.py  test_utils.py  test_webfinger.py
purl_sync/review/tests/test_data/: mock_request_remote_person.json  mock_request_remote_person_webfinger.json  mock_request_remote_purl.json  mock_request_remote_purl_webfinger.json
(+8168 files in other folders)
