[build-system]
requires = ["setuptools >= 50", "wheel", "setuptools_scm[toml] >= 6"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# this is used populated when creating a git archive
# and when there is .git dir and/or there is no git installed
fallback_version = "9999.$Format:%h-%cs$"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "vulnerablecode.settings"

# Fail tests that render templates which make use of invalid template variables.
FAIL_INVALID_TEMPLATE_VARS = true

markers = [
    "webtest",
]

norecursedirs = [
   ".git",
   "bin",
   "dist",
   "build",
   "_build",
   "dist",
   "etc",
   "local",
   "ci",
   "docs",
   "man",
   "share",
   "samples",
   ".cache",
   ".settings",
   "Include",
   "include",
   "Lib",
   "lib",
   "lib64",
   "Lib64",
   "Scripts",
   "thirdparty",
   "tmp",
   "venv",
   "tests/data",
   ".eggs",
   "src/*/data",
   "tests/*/data"
]

python_files = "*.py"

python_classes = "Test"
python_functions = "test"

addopts = [
    "-rfExXw",
    "--strict-markers",
    "--doctest-modules",
    # Ignore the following doctests until these files are migrated to
    # import-improve structure
    "--ignore=vulnerabilities/importers/apache_httpd.py",
    "--ignore=vulnerabilities/importers/apache_kafka.py",
    "--ignore=vulnerabilities/importers/apache_tomcat.py",
    "--ignore=vulnerabilities/importers/elixir_security.py",
    "--ignore=vulnerabilities/importers/gentoo.py",
    "--ignore=vulnerabilities/importers/istio.py",
    "--ignore=vulnerabilities/importers/kaybee.py",
    "--ignore=vulnerabilities/importers/npm.py",
    "--ignore=vulnerabilities/importers/postgresql.py",
    "--ignore=vulnerabilities/importers/project_kb_msr2019.py",
    "--ignore=vulnerabilities/importers/retiredotnet.py",
    "--ignore=vulnerabilities/importers/ruby.py",
    "--ignore=vulnerabilities/importers/rust.py",
    "--ignore=vulnerabilities/importers/suse_backports.py",
    "--ignore=vulnerabilities/importers/suse_scores.py",
    "--ignore=vulnerabilities/importers/ubuntu_usn.py",
    "--ignore=vulnerabilities/importers/mozilla.py",
    "--ignore=vulnerabilities/importers/mattermost.py",
    "--ignore=vulnerabilities/importers/xen.py",
    "--ignore=vulnerabilities/management/commands/purl2cpe.py",
    "--ignore=vulnerabilities/lib_oval.py",
]

[tool.ruff]
line-length = 100
extend-exclude = []
target-version = "py310"
include = [
  "pyproject.toml",
  "src/**/*.py",
  "etc/**/*.py",
  "test/**/*.py",
  "tests/**/*.py",
  "doc/**/*.py",
  "docs/**/*.py",
  "*.py",
  "."
]
# ignore test data and testfiles: they should never be linted nor formatted 
exclude = [
# main style
  "**/tests/data/**/*",
# scancode-toolkit
  "**/tests/*/data/**/*",
# dejacode, purldb
  "**/tests/testfiles/**/*",
# vulnerablecode, fetchcode
  "**/tests/*/test_data/**/*",
  "**/tests/test_data/**/*",
]


[tool.ruff.lint]
# Rules: https://docs.astral.sh/ruff/rules/
select = [
#    "E",  # pycodestyle
#    "W",  # pycodestyle warnings
    "D",  # pydocstyle
#    "F",  # Pyflakes
#    "UP", # pyupgrade
#    "S",  # flake8-bandit
    "I",  # isort
#    "C9", # McCabe complexity
]
ignore = ["D1", "D200", "D202", "D203", "D205", "D212", "D400", "D415", "I001",
          "D413", "D417"]


[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 1
default-section = "first-party"
known-first-party = ["src", "tests", "etc/scripts/**/*.py"]
known-third-party = ["click", "pytest"]

sections = { django = ["django"] }
section-order = [
    "future",
    "standard-library",
    "django",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
# Place paths of files to be ignored by ruff here
"tests/*" = ["S101"]
"test_*.py" = ["S101"]


[tool.doc8]
ignore-path = ["docs/build", "doc/build", "docs/_build", "doc/_build"]
max-line-length=100
