[project]
name = "vulnerablecode"
version = "39.0.0"
description = "VulnerableCode is a free and open database of open source software package vulnerabilities because open source software vulnerabilities data and tools should be free and open source themselves."
readme = "README.rst"
requires-python = ">=3.13"
authors = [
  { name = "nexB. Inc. and others", email = "info@aboutcode.org" },
  { name = "Cariad SE" }
]
keywords = [
  "SBOM",
  "cve",
  "dependency",
  "open source",
  "package",
  "packageurl",
  "purl",
  "sca",
  "security",
  "vulnerability",
  "vulnerability-db",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License 2.0",
  "License :: OSI Approved :: CC-BY-SA-4.0",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Software Development",
  "Topic :: Software Development :: Bug Tracking",
  "Topic :: Utilities",
]

dependencies = [
  "Django>=5.2.11",
  "GitPython>=3.1.41",
  "Markdown>=3.5.0",
  "aboutcode.pipeline>=0.1.0",
  "beautifulsoup4>=4.13.0",
  "binaryornot>=0.4.4",
  "crispy-bootstrap4>=2024.1",
  "cvss>=3.6",
  "cwe2>=3.0.0",
  "dateparser>=1.3.0",
  "defusedxml>=0.7.1",
  "django-altcha>=0.2.0",
  "django-crispy-forms>=2.3",
  "django-environ>=0.11.2",
  "django-extensions>=3.2.3",
  "django-filter>=24.3",
  "django-rq>=2.10.1",
  "django-widget-tweaks>=1.5.0",
  "djangorestframework>=3.15.2",
  "drf-spectacular[sidecar]>=0.24.2",
  "fetchcode>=0.8.2",
  "gunicorn>=23.0.0",
  "license-expression>=30.3.1",
  "lxml>=6.0.2",
  "packageurl-python>=0.17.6",
  "psycopg2-binary>=2.9.11",
  "python-dateutil>=2.8.2",
  "python-dotenv>=0.20.0",
  "requests>=2.32.4",
  "rq-scheduler>=0.13.1",
  "saneyaml>=0.6.0",
  "texttable>=1.6.4",
  "toml>=0.10.2",
  "univers>=30.12.0",
  "uritemplate>=4.2.0",
]

[project.urls]
Homepage = "https://github.com/cariad-tech/vulnerablecode"

[project.scripts]
vulnerablecode = "vulnerablecode:command_line"
vulntotal = "vulntotal.vulntotal_cli:handler"

[dependency-groups]
dev = [
  "commoncode>=32.4.2",
  "django-debug-toolbar>=6.3.0",
  "doc8>=2.0.0",
  "flot>=0.7.3",
  "hatch>=1.16.5",
  "pyinstrument>=5.1.2",
  "pytest>=9.0.3",
  "pytest-django>=4.12.0",
  "ruff>=0.15.9",
  "sphinx>=9.1.0",
  "sphinx-autobuild>=2025.8.25",
  "sphinx-rtd-theme>=3.1.0",
  "sphinxcontrib-django2>=1.9",
  "ty>=0.0.29",
]

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"

[tool.codespell]
ignore-words-list = [
  "vulnerablecode",
  "vulntotal",
  "cve",
  "cwe",
  "cvss",
  "purl",
  "sbom",
  "scoring",
  "thirdparty"
]

[tool.hatch.envs.docs]
dependencies = ["sphinx", "sphinx-autobuild", "sphinx_rtd_theme"]

[tool.hatch.envs.docs.scripts]
check_style = "doc8 --max-line-length 100 source --ignore D000 --quiet"
check_build = "sphinx-build -b linkcheck -EW source build"
build = "sphinx-build -b html docs docs/_build/html"
serve = "sphinx-autobuild docs docs/_build/html"

[tool.pytest.ini]
DJANGO_SETTINGS_MODULE = "vulnerablecode.settings"
FAIL_INVALID_TEMPLATE_VARS = true
markers = [
  "webtest",
]
norecursedirs = [
  ".git",
  "dist",
  "build",
  "_build",
  "local",
  "ci",
  "docs",
  "man",
  "share",
  "samples",
  ".cache",
  ".settings",
  "thirdparty",
  "tmp",
  "venv",
  "*/tests/test_data",
  ".eggs",
  "src/*/data",
  "tests/*/data"
]
python_files = "*.py"
python_classes = "Test"
python_functions = "test"
addopts = [
  "-rfExXw",
  "--strict-markers",
  "--doctest-modules",
  "--ignore=vulnerabilities/importers/apache_httpd.py",
  "--ignore=vulnerabilities/importers/apache_kafka.py",
  "--ignore=vulnerabilities/importers/apache_tomcat.py",
  "--ignore=vulnerabilities/importers/elixir_security.py",
  "--ignore=vulnerabilities/importers/gentoo.py",
  "--ignore=vulnerabilities/importers/istio.py",
  "--ignore=vulnerabilities/importers/kaybee.py",
  "--ignore=vulnerabilities/importers/npm.py",
  "--ignore=vulnerabilities/importers/postgresql.py",
  "--ignore=vulnerabilities/importers/project_kb_msr2019.py",
  "--ignore=vulnerabilities/importers/retiredotnet.py",
  "--ignore=vulnerabilities/importers/ruby.py",
  "--ignore=vulnerabilities/importers/rust.py",
  "--ignore=vulnerabilities/importers/suse_backports.py",
  "--ignore=vulnerabilities/importers/suse_scores.py",
  "--ignore=vulnerabilities/importers/ubuntu_usn.py",
  "--ignore=vulnerabilities/importers/mozilla.py",
  "--ignore=vulnerabilities/importers/mattermost.py",
  "--ignore=vulnerabilities/importers/xen.py",
  "--ignore=vulnerabilities/management/commands/purl2cpe.py",
  "--ignore=vulnerabilities/lib_oval.py",
]

[tool.ruff]
fix = true
line-length = 120
# Exclude a variety of commonly ignored directories.
extend-exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]
# Assume Python 3.13.
target-version = "py313"

[tool.ruff.lint]
extend-select = [
  "E",  # pycodestyle error
  "W",  # pycodestyle warning
  "F",  # pyflakes
  "A",  # flakes8-builtins
  "C4",  # flake8-comprehensions
  "Q",  # flake8-quotes
  "SIM",  # flake8-simplify
  "PTH",  # flake8-use-pathlib
  "I",  # isort
  "N",  # pep8 naming
  "UP",  # pyupgrade
  "S",  # bandit
  "D",  # pydocstyle
]
ignore = [
  "N802",  # function name should be lowercase
  "SIM105",  # Suggest contextlib instead of try/except with pass
  "A005",  # Python shadow
  "D100",  # pydocstring public module
  "D104",  # pydocstring public package
  "D107",  # pydocstring init
]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
flake8-tidy-imports.ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"**/{tests}/*.py" = ["D", "S101"]
"**/{docs}/*" = ["A001"]
"**/{examples}/*" = ["D"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ty.src]
exclude = ["examples/**"]

[tool.uv.build-backend]
module-name = [
  "vulnerablecode",
  "vulntotal",
]
module-root = ""
