[metadata]
name = vulnerablecode
version = 33.4.0
license = Apache-2.0 AND CC-BY-SA-4.0

# description must be on ONE line https://github.com/pypa/setuptools/issues/1390
description = VulnerableCode is a free and open database of open source software package vulnerabilities because open source software vulnerabilities data and tools should be free and open source themselves.
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/nexB/vulnerablecode

author = nexB. Inc. and others
author_email = info@aboutcode.org

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development
    Topic :: Utilities
    Topic :: Security
    Topic :: Software Development :: Bug Tracking
    Framework :: Django

keywords =
    open source
    vulnerability
    security
    cve
    purl
    packageurl
    dependency
    package
    vulnerability-db
    SBOM
    sca

license_files =
    apache-2.0.LICENSE
    cc-by-sa-4.0.LICENSE
    NOTICE
    AUTHORS.rst
    CHANGELOG.rst
    README.rst

[options]
python_requires = >=3.8

packages=find:
include_package_data = true
zip_safe = false

install_requires =
    Django>=4.0.0
    psycopg2-binary>=2.8.6
    djangorestframework>=3.12.4
    django-filter>=2.4.0
    django-widget-tweaks>=1.4.8
    django-crispy-forms>=1.10.0
    django-environ>=0.8.0
    gunicorn>=20.1.0

    # for the API doc
    drf-spectacular[sidecar]>=0.24.2
    coreapi>=2.3.3

    #essentials
    packageurl-python>=0.10.5rc1
    univers>=30.10.0
    license-expression>=21.6.14

    # file and data formats
    binaryornot>=0.4.4
    saneyaml>=0.6.0
    beautifulsoup4>=4.9.3
    python-dateutil>=2.8.1
    toml>=0.10.2
    lxml>=4.6.4
    defusedxml>=0.7.1
    Markdown>=3.3.0
    dateparser>=1.1.1
    cvss>=2.4
    cwe2>=2.0.0

    # networking
    GitPython>=3.1.17
    requests>=2.25.1
    fetchcode>=0.2.0

    #vulntotal
    python-dotenv
    texttable


[options.extras_require]
dev =
    # Validation
    pycodestyle>=2.8.0
    black>=22.3.0
    isort>=5.10.1
    doc8>=0.11.1
    # Documentation
    Sphinx>=4.5.0
    sphinx_rtd_theme>=1.0.0
    sphinxcontrib-django2>=1.5
    # Tests
    pytest>=7.0.1
    pytest-django>=4.5.2
    freezegun>=1.1.0
	# misc
    ipython==8.10.0
    # used for testing
    commoncode
    # debug
    django-debug-toolbar

[options.entry_points]
console_scripts =
    vulnerablecode = vulnerablecode:command_line
    vulntotal = vulntotal.vulntotal_cli:handler
