[metadata]
name = vulnerablecode
version = 34.0.2
license = Apache-2.0 AND CC-BY-SA-4.0

# description must be on ONE line https://github.com/pypa/setuptools/issues/1390
description = VulnerableCode is a free and open database of open source software package vulnerabilities because open source software vulnerabilities data and tools should be free and open source themselves.
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/nexB/vulnerablecode

author = nexB. Inc. and others
author_email = info@aboutcode.org

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development
    Topic :: Utilities
    Topic :: Security
    Topic :: Software Development :: Bug Tracking
    Framework :: Django

keywords =
    open source
    vulnerability
    security
    cve
    purl
    packageurl
    dependency
    package
    vulnerability-db
    SBOM
    sca

license_files =
    apache-2.0.LICENSE
    cc-by-sa-4.0.LICENSE
    NOTICE
    AUTHORS.rst
    CHANGELOG.rst
    README.rst

[options]
python_requires = >=3.9

packages=find:
include_package_data = true
zip_safe = false

install_requires =
    Django>=4.2.0,<=5.0
    psycopg2-binary>=2.8.6
    djangorestframework>=3.15.0
    django-extensions>=3.2.3
    django-filter>=24.0
    django-widget-tweaks>=1.5.0
    django-crispy-forms>=2.3
    crispy-bootstrap4>=2024.1
    django-environ>=0.11.0
    gunicorn>=23.0.0

    # for the API doc
    drf-spectacular[sidecar]>=0.24.2

    #essentials
    packageurl-python>=0.15
    univers>=30.12.0
    license-expression>=30.0.0

    # file and data formats
    binaryornot>=0.4.4
    saneyaml>=0.6.0
    beautifulsoup4>=4.9.3
    python-dateutil>=2.8.1
    toml>=0.10.2
    lxml>=4.6.4
    defusedxml>=0.7.1
    Markdown>=3.3.0
    dateparser>=1.1.1
    cvss>=2.4
    cwe2>=3.0.0

    # networking
    GitPython>=3.1.17
    requests>=2.25.1
    fetchcode>=0.3.0

    #pipeline
    aboutcode.pipeline>=0.1.0

    #vulntotal
    python-dotenv
    texttable


[options.extras_require]
dev =
    # Validation
    pycodestyle>=2.8.0
    black>=22.3.0
    isort>=5.10.1
    doc8>=0.11.1
    # Documentation
    Sphinx>=4.5.0
    sphinx_rtd_theme>=1.0.0
    sphinxcontrib-django2>=1.5
    # Tests
    pytest>=7.0.1
    pytest-django>=4.5.2
    freezegun>=1.1.0
	# misc
    ipython==8.10.0
    # used for testing
    commoncode
    # debug
    django-debug-toolbar
    pyinstrument
    flot
    twine

[options.entry_points]
console_scripts =
    vulnerablecode = vulnerablecode:command_line
    vulntotal = vulntotal.vulntotal_cli:handler
